libusb/libusb/libusbi.h


struct list_head {
	struct list_head *prev, *next;
};
struct libusb_context {
	int debug;
	int debug_fixed;
	int ctrl_pipe[2];
	struct list_head usb_devs;
	usbi_mutex_t usb_devs_lock;
	struct list_head open_devs;
	usbi_mutex_t open_devs_lock;
	struct list_head flying_transfers;
	usbi_mutex_t flying_transfers_lock;
	struct list_head pollfds;
	usbi_mutex_t pollfds_lock;
	unsigned int pollfd_modify;
	usbi_mutex_t pollfd_modify_lock;
	libusb_pollfd_added_cb fd_added_cb;
	libusb_pollfd_removed_cb fd_removed_cb;
	void *fd_cb_user_data;
	usbi_mutex_t events_lock;
	int event_handler_active;
	usbi_mutex_t event_waiters_lock;
	usbi_cond_t event_waiters_cond;
#ifdef USBI_TIMERFD_AVAILABLE
	int timerfd;
#endif
};
struct libusb_device {
	usbi_mutex_t lock;
	int refcnt;
	struct libusb_context *ctx;
	uint8_t bus_number;
	uint8_t device_address;
	uint8_t num_configurations;
	struct list_head list;
	unsigned long session_data;
	unsigned char os_priv[0];
};
struct libusb_device_handle {
	usbi_mutex_t lock;
	unsigned long claimed_interfaces;
	struct list_head list;
	struct libusb_device *dev;
	unsigned char os_priv[0];
};