libusb.NET/Native/Functions.cs


		// int libusb_get_device_descriptor(libusb_device *dev, struct libusb_device_descriptor *desc);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_get_device_descriptor(libusb_device dev, ref libusb_device_descriptor desc);

		// int libusb_get_active_config_descriptor(libusb_device *dev, struct libusb_config_descriptor **config);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_get_active_config_descriptor(libusb_device dev, out libusb_config_descriptor config);

		// int libusb_get_config_descriptor(libusb_device *dev, uint8_t config_index, struct libusb_config_descriptor **config);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_get_config_descriptor(libusb_device dev, byte config_index, out libusb_config_descriptor config);

		// int libusb_get_config_descriptor_by_value(libusb_device *dev, uint8_t bConfigurationValue, struct libusb_config_descriptor **config);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_get_config_descriptor_by_value(libusb_device dev, byte bConfigurationValue, out libusb_config_descriptor config);

		// void libusb_free_config_descriptor(struct libusb_config_descriptor *config);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern void libusb_free_config_descriptor(libusb_config_descriptor config);

		// int libusb_get_string_descriptor_ascii(libusb_device_handle *dev, uint8_t desc_index, unsigned char *data, int length);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern int libusb_get_string_descriptor_ascii(libusb_device_handle dev, byte desc_index, out byte[] data, int length);
		public  static        int libusb_get_string_descriptor_ascii(libusb_device_handle dev, byte desc_index, out string data)
		{
			byte[] ascii = new byte[Constants.MaximumStringDescriptorByteLength];
			int ret = libusb_get_string_descriptor_ascii(dev, desc_index, out ascii, ascii.Length);

			StringBuilder sb = new StringBuilder();
			foreach (byte b in ascii)
			{
				if (b != 0)
					sb.Append(b);
				else
					break;
			}
			data = sb.ToString();

			return (ret);
		}

		#endregion

		#region Methods > libusb.h/io.c
		//------------------------------------------------------------------------------------------
		// Methods > libusb.h/io.c
		//------------------------------------------------------------------------------------------

		// struct libusb_transfer *libusb_alloc_transfer(int iso_packets);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern libusb_transfer libusb_alloc_transfer(int iso_packets);

		// void libusb_free_transfer(struct libusb_transfer *transfer);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern void libusb_free_transfer(libusb_transfer transfer);

		// int libusb_submit_transfer(struct libusb_transfer *transfer);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_submit_transfer(libusb_transfer transfer);

		// int libusb_cancel_transfer(struct libusb_transfer *transfer);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_cancel_transfer(libusb_transfer transfer);

		// int libusb_try_lock_events(libusb_context *ctx);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern int libusb_try_lock_events(IntPtr ctx);
		public  static        int libusb_try_lock_events()
		{
			return (libusb_try_lock_events(IntPtr.Zero));
		}

		// void libusb_lock_events(libusb_context *ctx);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern void libusb_lock_events(IntPtr ctx);
		public  static        void libusb_lock_events()
		{
			libusb_lock_events(IntPtr.Zero);
		}

		// void libusb_unlock_events(libusb_context *ctx);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern void libusb_unlock_events(IntPtr ctx);
		public  static        void libusb_unlock_events()
		{
			libusb_unlock_events(IntPtr.Zero);
		}

		// int libusb_event_handling_ok(libusb_context *ctx);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern int libusb_event_handling_ok(IntPtr ctx);
		public  static        int libusb_event_handling_ok()
		{
			return (libusb_event_handling_ok(IntPtr.Zero));
		}

		// int libusb_event_handler_active(libusb_context *ctx);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern int libusb_event_handler_active(IntPtr ctx);
		public  static        int libusb_event_handler_active()
		{
			return (libusb_event_handler_active(IntPtr.Zero));
		}

		// void libusb_lock_event_waiters(libusb_context *ctx);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern void libusb_lock_event_waiters(IntPtr ctx);
		public  static        void libusb_lock_event_waiters()
		{
			libusb_lock_event_waiters(IntPtr.Zero);
		}

		// void libusb_unlock_event_waiters(libusb_context *ctx);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern void libusb_unlock_event_waiters(IntPtr ctx);
		public  static        void libusb_unlock_event_waiters()
		{
			libusb_unlock_event_waiters(IntPtr.Zero);
		}

		// int libusb_wait_for_event(libusb_context *ctx, struct timeval *tv);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern int libusb_wait_for_event(IntPtr ctx, libusb_transfer transfer);
		public  static        int libusb_wait_for_event(libusb_transfer transfer)
		{
			return (libusb_wait_for_event(IntPtr.Zero, transfer));
		}

		// int libusb_handle_events_timeout(libusb_context *ctx, struct timeval *tv);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern int libusb_handle_events_timeout(IntPtr ctx, libusb_transfer transfer);
		public  static        int libusb_handle_events_timeout(libusb_transfer transfer)
		{
			return (libusb_handle_events_timeout(IntPtr.Zero, transfer));
		}

		// int libusb_handle_events(libusb_context *ctx);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern int libusb_handle_events(IntPtr ctx);
		public  static        int libusb_handle_events()
		{
			return (libusb_handle_events(IntPtr.Zero));
		}

		// int libusb_handle_events_locked(libusb_context *ctx, struct timeval *tv);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern int libusb_handle_events_locked(IntPtr ctx, libusb_transfer transfer);
		public  static        int libusb_handle_events_locked(libusb_transfer transfer)
		{
			return (libusb_handle_events_locked(IntPtr.Zero, transfer));
		}

		// int libusb_pollfds_handle_timeouts(libusb_context *ctx);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern int libusb_pollfds_handle_timeouts(IntPtr ctx);
		public  static        int libusb_pollfds_handle_timeouts()
		{
			return (libusb_pollfds_handle_timeouts(IntPtr.Zero));
		}

		// int libusb_get_next_timeout(libusb_context *ctx, struct timeval *tv);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern int libusb_get_next_timeout(IntPtr ctx, libusb_transfer transfer);
		public  static        int libusb_get_next_timeout(libusb_transfer transfer)
		{
			return (libusb_get_next_timeout(IntPtr.Zero, transfer));
		}

		// void libusb_set_pollfd_notifiers(libusb_context *ctx, libusb_pollfd_added_cb added_cb, libusb_pollfd_removed_cb removed_cb, void *user_data);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern void libusb_set_pollfd_notifiers(IntPtr ctx, libusb_pollfd_added_cb added_cb, libusb_pollfd_removed_cb removed_cb, out object user_data);
		public  static        void libusb_set_pollfd_notifiers(libusb_pollfd_added_cb added_cb, libusb_pollfd_removed_cb removed_cb, out object user_data)
		{
			libusb_set_pollfd_notifiers(IntPtr.Zero, added_cb, removed_cb, out user_data);
		}

		// const struct libusb_pollfd **libusb_get_pollfds(libusb_context *ctx);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern libusb_pollfd[] libusb_get_pollfds(IntPtr ctx);
		public  static        libusb_pollfd[] libusb_get_pollfds()
		{
			return (libusb_get_pollfds(IntPtr.Zero));
		}

		#endregion

		#region Methods > libusb.h/sync.c
		//------------------------------------------------------------------------------------------
		// Methods > libusb.h/sync.c
		//------------------------------------------------------------------------------------------

		// int libusb_control_transfer(libusb_device_handle *dev_handle, uint8_t bmRequestType, uint8_t bRequest, uint16_t wValue, uint16_t wIndex, unsigned char *data, uint16_t wLength, unsigned int timeout);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern int libusb_control_transfer(libusb_device_handle dev_handle, byte bmRequestType, byte bRequest, ushort wValue, ushort wIndex, ref byte[] data, ushort wLength, uint timeout);
		public  static        int libusb_control_transfer(libusb_device_handle dev_handle, byte bmRequestType, byte bRequest, ushort wValue, ushort wIndex, ref byte[] data, int timeout)
		{
			return (libusb_control_transfer(dev_handle, bmRequestType, bRequest, wValue, wIndex, ref data, Convert.ToUInt16(data != null ? data.Length : 0), Convert.ToUInt32(timeout)));
		}
